# GYMBUDDY

./: .gitignore  README.md  docker-compose.yml  steps.txt
backend/: CMakeLists.txt  Dockerfile
backend/include/bcrypt/: bcrypt.h
backend/include/controllers/: auth_controller.h  content_controller.h
backend/include/db/: connection.h
backend/include/models/: base_model.h  content.h  user.h
backend/include/utils/: hasher.h
backend/src/: main.cpp
backend/src/controllers/: auth_controller.cpp  content_controller.cpp
backend/src/db/: connection.cpp
backend/src/models/: content.cpp  user.cpp
backend/src/utils/: hasher.cpp
database/: Dockerfile  init.sql
frontend/: .env.local.example  Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx  styles.css
frontend/app/diets/: page.tsx  styles.css
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/supplements/: page.tsx  styles.css
frontend/app/workouts/: page.tsx  styles.css
frontend/components/: ContentCard.tsx  Header.tsx
frontend/lib/: api.ts
